package mx.com.qtxcotizadorM2DiploArq7.negocio;

public interface IComponentePc {
	Articulo getArticulo();
}
