package mx.com.qtxcotizadorM2DiploArq7.negocio;
public enum TipoArticulo {
    TARJETA_VIDEO,
    MONITOR,
    DISCO_DURO,
    PC
}
