classDiagram
    %% Relaciones de Dependencia
    TestCotizador ..> Cotizador
    TestCotizador ..> Articulo
    TestCotizador ..> Pc

    %% Relaciones de Herencia
    Articulo <|-- Monitor
    Articulo <|-- TarjetaVideo
    Articulo <|-- DiscoDuro
    Articulo <|-- Pc

    %% Relaciones de Implementación
    IComponentePc <|.. Monitor
    IComponentePc <|.. TarjetaVideo
    IComponentePc <|.. DiscoDuro

    %% Relaciones de Agregación
    Cotizador o-- "1..*" Articulo : IstArticulos
    Pc o-- "1..*" IComponentePc : IstComponentes

    %% Dependencia del Builder
    Pc ..> PcBuilder : usa
    PcBuilder ..> Pc : crea

    %% Enum
    class TipoArticulo {
        <<enumeration>>
        TARJETA_VIDEO
        MONITOR
        DISCO_DURO
        PC
    }

    class TestCotizador {
        +main() void
        +testCotizador() void
    }

    class Cotizador {
        -lstArticulos: List~Articulo~
        -lstCantidades: List~Integer~
        +cotizar() void
        +agregarItemCotizacion(Articulo, Integer) void
    }

    class Articulo {
        -marca: String
        -modelo: String
        -precioBase: BigDecimal
        -costo: BigDecimal
        -sku: String
        +getters() void
        +setters() void
        +cotizar(Integer) BigDecimal
        +getTipo() TipoArticulo
        +crearArticulo(Map~String,Object~) Articulo
    }

    class Monitor {
        +cotizar(Integer) BigDecimal
    }

    class TarjetaVideo {
        -memoria: String
        -PROMO_LLEVE_N_XM_VALOR_N: int (readOnly)
        -PROMO_LLEVE_N_XM_VALOR_M: int (readOnly)
        +cotizar(Integer) BigDecimal
    }

    class DiscoDuro {
        -capacidadAlmacenamiento: String
        +cotizar(Integer) BigDecimal
    }

    class IComponentePc {
        <<interface>>
        +getArticulo() Articulo
    }

    class Pc {
        -lstComponentes: List~IComponentePc~
        +cotizar(Integer) BigDecimal
        +agregarComponente(IComponentePc) void
        +getBuilder() PcBuilder
    }

    class PcBuilder {
        -MAX_DISCOS: int = 4 (readOnly)
        -MAX_MONITORES: int = 2 (readOnly)
        -MAX_TARJETAS: int = 1 (readOnly)
        -lstDiscos: List~DiscoDuro~
        -lstMonitores: List~Monitor~
        -tarjeta: TarjetaVideo
        -parametros: Map~String,Object~
        +agregarParametro(String, Object) PcBuilder
        +agregarDiscoDuro(IComponentePc) PcBuilder
        +agregarMonitor(IComponentePc) PcBuilder
        +agregarTarjetaVideo(IComponentePc) PcBuilder
        +build() Pc
        -configuracionValida() boolean
        +validarConfiguracion() Map~String,String~
    }

    %% Notas
    note for PcBuilder "Configurar correctamente un objeto de estructura compleja (la pc)"
    
    Articulo ..> TipoArticulo